# internal/bff-service/server/http/handler/router/openapi/router.go
@@ -64,6 +64,11 @@ func Register(openAPI *gin.RouterGroup) {
 	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/list", http.MethodGet, openapi.GetDocSegmentList, "获取文档切分结果", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeView))
 	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/child/list", http.MethodGet, openapi.GetDocChildSegmentList, "获取子分段列表", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeView))
 	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/status/update", http.MethodGet, openapi.UpdateDocSegmentStatus, "更新分段状态", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeEdit))
+	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/create", http.MethodPost, openapi.CreateDocSegment, "新增文档切片", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeEdit))
+	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/batch/create", http.MethodPost, openapi.BatchCreateDocSegment, "批量新增文档切片", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeEdit))
+	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/update", http.MethodPost, openapi.UpdateDocSegment, "更新文档切片", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeEdit))
+	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/delete", http.MethodDelete, openapi.DeleteDocSegment, "删除文档切片", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledgeDoc("docId", middleware.KnowledgeEdit))
+	mid.Sub("openapi").RegWithAPIType(openAPI, "/knowledge/doc/segment/image/upload", http.MethodPost, openapi.UploadDocSegmentImage, "分段图片上传", constant.OpenAPITypeKnowledge, middleware.AuthOpenAPIKey(), middleware.APIKeyRecord(middleware.RecordNonStreamType), middleware.AuthKnowledge("knowledgeId", middleware.KnowledgeEdit))
 
 	// mcp server
 	mid.Sub("openapi").Reg(openAPI, "/mcp/server/sse", http.MethodGet, openapi.GetMCPServerSSE, "新建MCP服务sse连接", middleware.AuthAppKeyByQuery(constant.AppTypeMCPServer))
